Show a diverse activity shortlist
